# camunits

./: ChangeLog  DownloadingAndInstalling.md  FAQ.md  Makefile.am  NEWS  OlderNews.md  ProjectHome.md  camunits.spec.in  configure.in
docs/plugins/: Makefile.am  convert-colorspace.sgml  convert-fast-debayer.sgml  convert-jpeg-compress.sgml  convert-jpeg-decompress.sgml  convert-to-rgb8.sgml  input-example.sgml  input-log.sgml  input-v4l.sgml  input-v4l2.sgml  output-logger.sgml
libcam/: Makefile.am  cam.h  convert_colorspace.c  convert_to_rgb8.c  convert_to_rgb8.h  filter_bayer.c  filter_bayer.h  filter_color_convert.c  filter_color_convert.h  filter_fast_bayer.c  filter_gl.c  filter_gl.h  filter_jpeg.c  framebuffer.c  framebuffer.h  gl_texture.c  gl_texture.h  input_dc1394.c  input_example.c  input_example.h  input_log.c  input_log.h  input_v4l.c  input_v4l.h  input_v4l2.c  input_v4l2.h  libcam-gmarshal.c  libcam.pc.in  log.h  output_logger.c  pixels.c  pixels.h  pixels_sse2.c  unit.c  unit.h  unit_chain.c  unit_chain.h  unit_control.c  unit_control.h  unit_driver.c  (+4 more)
libcam-gtk/: Makefile  Makefile.am  cam_gtk.h  cam_tree_store.h  libcam-gtk.pc.in  unit_chain_gl_widget.c  unit_chain_gl_widget.h  unit_chain_widget.c  unit_control_widget.c  unit_control_widget.h  unit_description_widget.c  unit_manager_widget.c  unit_manager_widget.h
libcam-lcm/trunk/: AUTHORS  Makefile.am  README  configure.in
libcam-lcm/trunk/lcmtypes/: Makefile.am  announce_t.lcm  image_t.lcm  key_byte_t.lcm
libcam-lcm/trunk/plugins/: Makefile.am  lcm_input.c  lcm_publish.c  unit_input.c  unit_publish.c  unit_publish.h
plugins/camunits-extra/: ChangeLog  Makefile.am  NEWS  README  configure.ac  configure.in
plugins/camunits-extra/cvd/: Makefile.am  demo_libcvd_fast.cpp
plugins/camunits-extra/docs/: Makefile.am  framewave-jpeg-compress.sgml  framewave-jpeg-decompress.sgml  framewave-resize.sgml  ipp-jpeg-compress.sgml  ipp-jpeg-decompress.sgml  ipp-resize.sgml  main.sgml
plugins/camunits-extra/fh-segment/: Makefile.am  demo_fh_segment.cpp
plugins/camunits-extra/framewave/: Makefile.am  README
plugins/camunits-extra/klt-stb/: Makefile.am  README  color_util.h  demo_klt_stb.c
plugins/camunits-extra/lcm/: Makefile.am  README
plugins/camunits-extra/m4/: camunits.m4  framewave.m4  ipp.m4  lcm.m4
plugins/camunits-extra/opencv/: Makefile.am  demo_canny.c  demo_good_features_to_track.c  demo_object_detection.c  undistort.c
plugins/camunits-extra/po/: Makevars
plugins/camunits-extra/progs/: Makefile.am  camlog2jpeg.1  camlog2jpeg.c
plugins/camunits-extra/ptgrey/: Makefile.am  bumblebee2_gl.c
plugins/camunits-extra/util/: Makefile.am  convert_to_gray.c  image_files.c  snapshot.c  throttle.c
plugins/camunits-stereo/plugins/: CMakeLists.txt
plugins/convert/: Makefile.am  convert_colorspace.c  convert_jpeg_compress.c  convert_jpeg_decompress.c  convert_to_rgb8.c  filter_fast_bayer.c
plugins/jpeg/: Makefile.am  convert_jpeg_compress.c  convert_jpeg_decompress.c
plugins/libcam-extra/: ChangeLog  Makefile.am  configure.in
plugins/libcam-extra/cvd/: Makefile.am  README  demo_libcvd_fast.cpp
plugins/libcam-extra/fh-segment/: Makefile.am  README  demo_fh_segment.cpp  diff-from-orig.txt  glib_util.h
plugins/libcam-extra/framewave/: Makefile.am
plugins/libcam-extra/ipp/: Makefile.am  README
plugins/libcam-extra/klt-stb/: Makefile.am  demo_klt_stb.c
plugins/libcam-extra/lcm/: README
plugins/libcam-extra/m4/: ipp.m4
plugins/libcam-extra/progs/: Makefile.am  camlog2jpeg.1  camlog2jpeg.c
plugins/libcam-extra/ptgrey/: Makefile.am  bumblebee2_gl.c
plugins/libcam-extra/util/: Makefile.am  image_files.c  snapshot.c  throttle.c
plugins/libcam-ipp/trunk/: Makefile.am  configure.in
plugins/libcam-opencv/trunk/: AUTHORS  ChangeLog  NEWS  README  configure.in
trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.in
trunk/camlog/: Makefile.am  camlog.1  camlog.c  signal_pipe.c
trunk/camunits/: Makefile.am  camunits-gmarshal.list  camunits.pc.in  convert_jpeg_compress.c  convert_jpeg_decompress.c  convert_to_rgb8.c  convert_to_rgb8.h  filter_fast_bayer.c  filter_gl.c  framebuffer.h  gl_texture.c  gl_texture.h  input_example.c  input_example.h  input_log.c  input_log.h  input_v4l2.h  libcam.pc.in  log.h  output_logger.h  pixels.c  pixels.h  plugin.c  plugin.h  unit.c  unit.h  unit_chain.c  unit_chain.h  unit_control.c  unit_control.h  unit_driver.c  unit_driver.h  unit_format.h  unit_manager.c  unit_manager.h
trunk/camunits-gtk/: Makefile.am  cam-gtk.h  cam_tree_store.h  gl_drawing_area.c  libcam-gtk.pc.in  unit_chain_gl_widget.c  unit_chain_gl_widget.h  unit_chain_widget.c  unit_control_widget.c  unit_control_widget.h  unit_description_widget.c  unit_description_widget.h  unit_manager_widget.c  unit_manager_widget.h
trunk/camview/: Makefile  Makefile.am  camview.1  camview.c  gtk_util.h
trunk/docs/: Makefile.am  release_checklist
trunk/docs/plugins/: camunits-plugins-docs.sgml  convert-fast-debayer.sgml  convert-jpeg-compress.sgml  convert-to-rgb8.sgml  filter-gl.sgml  input-dc1394.sgml  input-v4l.sgml  input-v4l2.sgml  output-logger.sgml
trunk/docs/reference/: Makefile.am
trunk/docs/tutorial/: acquiring.sgml  (+9 more)
trunk/examples/: Makefile  Makefile.am  snapshot.c
trunk/libcam/: Makefile  Makefile.am  cam.h  convert_colorspace.c  convert_colorspace.h  convert_to_rgb8.c  convert_to_rgb8.h  dbg.h  filter_bayer.c  filter_bayer.h  filter_fast_bayer.c  filter_fast_bayer.h  filter_gl.c  filter_jpeg.c  filter_jpeg.h  framebuffer.c  framebuffer.h  gl_texture.c  input_dc1394.c  input_dc1394.h  input_example.c  input_example.h  input_log.c  input_log.h  input_v4l.c  input_v4l.h  input_v4l2.c  log.c  log.h  output_logger.c  pixels.c  pixels.h  pixels_sse3.c  plugin.c  unit.c  unit.h  unit_chain.c  unit_chain.h  unit_control.c  unit_control.h  (+5 more)
trunk/libcam-gtk/: Makefile.am  cam_gtk.h  cam_tree_store.h  unit_chain_gl_widget.c  unit_chain_gl_widget.h  unit_control_widget.c  unit_manager_widget.c
trunk/m4macros/: Makefile.am  libcam.m4
trunk/plugins/: Makefile.am
(+723 files in other folders)
