SUBDIRS = build

EXTRA_DIST = camunits-plugins-docs.sgml \
			 convert-colorspace.sgml \
			 convert-fast-debayer.sgml \
			 convert-jpeg-compress.sgml \
			 convert-jpeg-decompress.sgml \
			 convert-to-rgb8.sgml \
			 filter-gl.sgml \
			 input-dc1394.sgml \
			 input-dc1394-widget.png \
			 input-example.sgml \
			 input-example-widget.png \
			 input-log.sgml \
			 input-log-widget.png \
			 input-v4l2.sgml \
			 input-v4l2-widget.png \
			 input-v4l.sgml \
			 output-logger.sgml \
			 output-logger-widget.png
