AC_PREREQ(2.50)
AC_INIT(lcm/plugins/lcm_publish.h)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(libcam-extra, 0.0.1)

AC_PROG_CC

dnl check for GLib
AM_PATH_GLIB_2_0(,,,gthread gobject gmodule)
PKG_PROG_PKG_CONFIG

dnl check for libcam
AM_PATH_LIBCAM(,,
       [AC_MSG_ERROR([libcam is not found, but is required by libcam-lcm.])])

dnl check for lcm
AM_PATH_LCM(,,
       [AC_MSG_WARN([lcm is not found, lcm plugins will not be built.])])
AM_CONDITIONAL(HAVE_LCM, test "x$LCM_LIBS" != x)

AM_DISABLE_STATIC
AM_PROG_LIBTOOL

libcamdatadir="$datadir/libcam"
AC_SUBST(libcamdatadir)
libcamplugindir="$libdir/libcam"
AC_SUBST(libcamplugindir)

dnl ---------------------------------------------------------------------------
dnl i18n support
dnl ---------------------------------------------------------------------------
ALL_LINGUAS=""

dnl The gettext domain of the library
GETTEXT_PACKAGE=${PACKAGE}
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[The gettext domain for the library])
AC_SUBST(GETTEXT_PACKAGE)
AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION(0.14.3)

AM_ICONV()

dnl ---------------------------------------------------------------------------
dnl Warnings
dnl ---------------------------------------------------------------------------
if test "x$GCC" = "xyes"; then
    CFLAGS="$CFLAGS -g -Wall -std=gnu99 -Wmissing-declarations -Wmissing-prototypes -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE"
    LDFLAGS="$LDFLAGS -g -Wall"
    AC_SUBST(CFLAGS)
    AC_SUBST(LDFLAGS)
fi
LIBTOOL="$LIBTOOL --silent"
AC_SUBST(LIBTOOL)

AC_OUTPUT([
  Makefile
  lcm/Makefile
  lcm/plugins/Makefile
  lcm/lcmtypes/Makefile
  po/Makefile.in
])

if test "x$LCM_LIBS" = x; then
    LCM_MSG="Disabled (lcm not found)"
else
    LCM_MSG="Enabled"
fi

echo "

Configuration (libcam-extra):

	Source code location:  ${srcdir}
	Compiler:              ${CC}
	LCM plugins:           ${LCM_MSG}
"
